--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,6 +176,12 @@ h1, h2, h3, h4, h5, h6 {
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
 }
+/* Style for the image */
+.navbar-brand img {
+  width: 60px; /* Adjust the width as needed */
+  height: 60px; /* Maintain aspect ratio */
+  border-radius: 50%; /* Make the image rounded */
+}
 
 .nav-menu a:hover:before, .nav-menu li:hover > a:before, .nav-menu .active > a:before {
   visibility: visible;
